--- a/Categorías.html
+++ b/Categorías.html
@@ -137,7 +137,7 @@
         <button class="btn-question">Answer 4</button>
       </div>
       <div class="controls">
-        <button id="restart-btn" class="restart-btn btn-question hide">Restart</button>
+        <button id="restart-btn" class="restart-btn btn-question hide">Fin de ronda</button>
         <button id="next-btn" class="next-btn btn-question hide">Siguiente</button>
       </div>
   </section>
